--- a/Resources/Public/Less/Theme/navbar.less
+++ b/Resources/Public/Less/Theme/navbar.less
@@ -37,6 +37,17 @@
 
 
 //
+// Collapse
+//
+@media (min-width: @grid-float-breakpoint) {
+    .navbar-collapse {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+
+//
 // Transition
 //
 .navbar-default-transition,
